--- a/tmldb-front/package.json
+++ b/tmldb-front/package.json
@@ -12,12 +12,11 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^7.0.0",
+		"@sveltejs/adapter-node": "^5.5.3",
 		"@sveltejs/kit": "^2.50.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
 		"svelte": "^5.48.2",
 		"svelte-check": "^4.3.5",
-		"sveltekit-search-params": "^3.0.0",
 		"typescript": "^5.9.3",
 		"vite": "^7.3.1"
 	},
