--- a/tmldb-back/tmldb-back.csproj
+++ b/tmldb-back/tmldb-back.csproj
@@ -7,6 +7,10 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
+	<ItemGroup>
+		<None Include="config.ini" CopyToPublishDirectory="Always" />
+	</ItemGroup>
+	
     <ItemGroup>
         <PackageReference Include="Dapper" Version="2.1.66" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.23"/>
